samples/_failures_safe/1761724635_a15dbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3a3535b.c: In function ‘main’:
./samples/SAFE/__tmp_b3a3535b.c:156:17: error: expected ‘;’ at end of input
  156 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_b3a3535b.c:156:9: error: expected declaration or statement at end of input
  156 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_b3a3535b.c:156:9: error: expected declaration or statement at end of input
